...
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="qxJ-Ow-lFZ">
                                <rect key="frame" x="40" y="284.5" width="295" height="98"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cZr-z3-2YB">
                                        <rect key="frame" x="0.0" y="0.0" width="295" height="45"/>
                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" label="LogInButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="aXL-GH-4dR"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <state key="normal" title="Log In"/>
                                        <connections>
                                            <segue destination="fxf-j3-rtF" kind="show" id="d2M-9T-fro"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yli-Cv-ygN">
                                        <rect key="frame" x="0.0" y="53" width="295" height="45"/>
                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" label="SignUpButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="OAD-bh-I2u"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <state key="normal" title="Sign Up"/>
                                        <connections>
...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="H0P-yW-DJG">
                                <rect key="frame" x="35" y="228" width="305" height="210"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="To4-Hk-4Nz">
                                        <rect key="frame" x="0.0" y="0.0" width="305" height="45"/>
                                        <accessibility key="accessibilityConfiguration" label="NameTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="mzc-97-eaR"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SlL-qY-wvu">
                                        <rect key="frame" x="0.0" y="55" width="305" height="45"/>
                                        <accessibility key="accessibilityConfiguration" label="EmailTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="9Qn-6d-mUp"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5ZN-go-BnV">
                                        <rect key="frame" x="0.0" y="110" width="305" height="45"/>
                                        <accessibility key="accessibilityConfiguration" label="PasswordTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="Bgt-8U-BTt"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <textInputTraits key="textInputTraits"/>
...
                    <view key="view" contentMode="scaleToFill" id="c2L-PL-Z2w">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <viewLayoutGuide key="safeArea" id="Ah8-JX-MwR"/>
                    </view>
                    <navigationItem key="navigationItem" title="Messages" id="NyO-Te-Wu0">
                        <barButtonItem key="leftBarButtonItem" title="Log Out" id="AYY-Fo-yOl">
                            <connections>
                                <action selector="logoutTapped:" destination="SMA-VA-2mc" id="Pd3-Ek-Yps"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Lk3-tR-rMS">
...
